# px-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: mandelbrot.cpp  square.cpp
include/: color.h  engine.h  keyCodes.h
src/: engine.cpp  graphics.cpp  graphics.h  input.cpp  input.h  openGLContext.h  surface.cpp  surface.h  window.cpp  window.h
